@@ -126,7 +126,7 @@ public:
 	SessionPingThreadPtr ping = new SessionPingThread(session);
 	ping->start();
 
-	string category = router->getServerProxy()->ice_getIdentity().category;
+	string category = router->getCategoryForClient();
 	Ice::Identity callbackReceiverIdent;
 	callbackReceiverIdent.name = "callbackReceiver";
 	callbackReceiverIdent.category = category;
