@@ -1490,8 +1490,6 @@ public abstract class Map extends java.util.AbstractMap
 		    boolean inRange = true;
 		    if(_toKey != null)
 		    {
-			System.err.println("Comparing!");
-
 			if(_index != null)
 			{
 			    inRange = _index.compare(dbIKey.getData(), _toKey) < 0;
